--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-Welcome
+<h3 style="text-align: center;"><span style="color: #ff6600;"><strong>VARDHAMAN COLLEGE OF ENGINEERING, Hyderabad</strong></span></h3>
+<h3 style="text-align: center;"><span style="color: #0000ff;"><strong>Department of Computer Science and Engineering</strong></span></h3>
+<p><strong>Submit IELTS/GRE/TOEFL/GATE/CAT/Others Data Required : <a href="https://forms.gle/6ceb47KNxm6nXrAC7">Click Here</a></strong></p>
+<p><strong>Submit Admission Lettesr : <span style="background-color: #ffffff;"><a style="background-color: #ffffff;" href="https://forms.gle/cv3X3GgbKPfpfFQ98">Click Here</a></span></strong></p>
 </html>
