--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@
 <p><strong>Submit Admission Letter : <span style="background-color: #ffffff;"><a style="background-color: #ffffff;" href="https://forms.gle/cv3X3GgbKPfpfFQ98">Click Here</a></span></strong></p>
 <p><strong>
 Distinguished Alumnus Awards : <span style="background-color: #ffffff;"><a style="background-color: #ffffff;" href="https://forms.gle/SDnva8veHayimqQ86">Click Here</a></span></strong></p>
+
+<p><strong> LOR's Issued :  <span style="background-color: #ffffff;"><a style="background-color: #ffffff;" href="https://forms.gle/VpFYGVZWavHpdLgv8">Click Here</a></span></strong></p>
 </html>
