--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <html>
 <h3 style="text-align: center;"><span style="color: #ff6600;"><strong>VARDHAMAN COLLEGE OF ENGINEERING, Hyderabad</strong></span></h3>
 <h3 style="text-align: center;"><span style="color: #0000ff;"><strong>Department of Computer Science and Engineering</strong></span></h3>
-<p><strong>Submit IELTS/GRE/TOEFL/GATE/CAT/Others Data Required : <a href="https://forms.gle/6ceb47KNxm6nXrAC7">Click Here</a></strong></p>
-<p><strong>Submit Admission Letter : <span style="background-color: #ffffff;"><a style="background-color: #ffffff;" href="https://forms.gle/cv3X3GgbKPfpfFQ98">Click Here</a></span></strong></p>
-<p><strong>
-Distinguished Alumnus Awards : <span style="background-color: #ffffff;"><a style="background-color: #ffffff;" href="https://forms.gle/SDnva8veHayimqQ86">Click Here</a></span></strong></p>
-
-<p><strong> LOR's Issued :  <span style="background-color: #ffffff;"><a style="background-color: #ffffff;" href="https://forms.gle/VpFYGVZWavHpdLgv8">Click Here</a></span></strong></p>
+<table border="1" width="58%">
+	<tr>
+		<td width="33" align="center"><b>1</b></td>
+		<td width="52">
+		<img border="0" src="file:///C:/Users/Venu/AppData/Local/Microsoft/Windows/INetCache/FrontPageTempDir/wp0pgxb2.jpg" width="65" height="71"></td>
+		<td width="363"><strong>Submit IELTS/GRE/TOEFL/GATE/CAT/Others Data Required </strong>
+		</td>
+		<td width="70" align="center"><strong>
+		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">Submit</a></strong></td>
+		<td align="center"><strong>
+		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
+	</tr>
+	<tr>
+		<td width="33" align="center"><b>2</b></td>
+		<td width="52">
+		<img border="0" src="file:///C:/Users/Venu/AppData/Local/Microsoft/Windows/INetCache/FrontPageTempDir/wpx2568b.jpg" width="76" height="66"></td>
+		<td width="363"><strong>Submit Higher Studies Admission Letter </strong>
+		</td>
+		<td width="70" align="center"><strong>
+		<a href="https://forms.gle/cv3X3GgbKPfpfFQ98">
+		<span style="background-color: #FFFFFF">Submit</span></a></strong></td>
+		<td align="center"><strong>
+		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
+	</tr>
+	<tr>
+		<td width="33" align="center"><b>3</b></td>
+		<td width="52">
+		<img border="0" src="file:///C:/Users/Venu/AppData/Local/Microsoft/Windows/INetCache/FrontPageTempDir/wppexykm.jpg" width="82" height="76"></td>
+		<td width="363"><strong>
+		Distinguished Alumnus Awards</strong></td>
+		<td width="70" align="center"><strong>
+		<a href="https://forms.gle/SDnva8veHayimqQ86">
+		<span style="background-color: #FFFFFF">Submit</span></a></strong></td>
+		<td align="center"><strong>
+		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
+	</tr>
+	<tr>
+		<td width="33" align="center"><b>4</b></td>
+		<td width="52">
+		<img border="0" src="file:///C:/Users/Venu/AppData/Local/Microsoft/Windows/INetCache/FrontPageTempDir/wp0wukbh.jpg" width="84" height="102"></td>
+		<td width="363"><strong>
+		LOR's Issued</strong></td>
+		<td width="70" align="center"><strong>
+		<a href="https://forms.gle/VpFYGVZWavHpdLgv8">
+		<span style="background-color: #FFFFFF">Submit</span></a></strong></td>
+		<td align="center"><strong>
+		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
+	</tr>
+</table>
+<p>&nbsp;</p>
 </html>
