--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<tr>
 		<td width="33" align="center"><b>1</b></td>
 		<td width="52">
-		<img border="0" src="file:///C:/Users/Venu/AppData/Local/Microsoft/Windows/INetCache/FrontPageTempDir/wp0pgxb2.jpg" width="65" height="71"></td>
+		<img border="0" src="logo.png" width="65" height="71"></td>
 		<td width="363"><strong>Submit IELTS/GRE/TOEFL/GATE/CAT/Others Data Required </strong>
 		</td>
 		<td width="70" align="center"><strong>
