--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<tr>
 		<td width="33" align="center"><b>1</b></td>
 		<td width="52">
-		<img border="0" src="logo.png" width="65" height="71"></td>
+		<img border="0" src="ielts.jpg" width="65" height="71"></td>
 		<td width="363"><strong>Submit IELTS/GRE/TOEFL/GATE/CAT/Others Data Required </strong>
 		</td>
 		<td width="70" align="center"><strong>
@@ -16,7 +16,7 @@
 	<tr>
 		<td width="33" align="center"><b>2</b></td>
 		<td width="52">
-		<img border="0" src="file:///C:/Users/Venu/AppData/Local/Microsoft/Windows/INetCache/FrontPageTempDir/wpx2568b.jpg" width="76" height="66"></td>
+		<img border="0" src="ad2.jpg" width="76" height="66"></td>
 		<td width="363"><strong>Submit Higher Studies Admission Letter </strong>
 		</td>
 		<td width="70" align="center"><strong>
@@ -28,7 +28,7 @@
 	<tr>
 		<td width="33" align="center"><b>3</b></td>
 		<td width="52">
-		<img border="0" src="file:///C:/Users/Venu/AppData/Local/Microsoft/Windows/INetCache/FrontPageTempDir/wppexykm.jpg" width="82" height="76"></td>
+		<img border="0" src="awd.jpg" width="82" height="76"></td>
 		<td width="363"><strong>
 		Distinguished Alumnus Awards</strong></td>
 		<td width="70" align="center"><strong>
@@ -40,7 +40,7 @@
 	<tr>
 		<td width="33" align="center"><b>4</b></td>
 		<td width="52">
-		<img border="0" src="file:///C:/Users/Venu/AppData/Local/Microsoft/Windows/INetCache/FrontPageTempDir/wp0wukbh.jpg" width="84" height="102"></td>
+		<img border="0" src="r1.jpg" width="84" height="102"></td>
 		<td width="363"><strong>
 		LOR's Issued</strong></td>
 		<td width="70" align="center"><strong>
