--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <h3 style="text-align: center;"><span style="color: #ff6600;"><strong>VARDHAMAN COLLEGE OF ENGINEERING, Hyderabad</strong></span></h3>
 <h3 style="text-align: center;"><span style="color: #0000ff;"><strong>Department of Computer Science and Engineering</strong></span></h3>
-<table border="1" width="53%">
+<center><table border="1" width="53%">
 	<tr>
 		<td width="33" align="center"><b>1</b></td>
 		<td width="363"><strong>Submit IELTS/GRE/TOEFL/GATE/CAT/Others Data Required </strong>
@@ -41,6 +41,6 @@
 		<td align="center"><strong>
 		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
 	</tr>
-</table>
+</table></center>
 <p>&nbsp;</p>
 </html>
