--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<td width="87" align="center"><strong>
 		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">Submit</a></strong></td>
 		<td align="center"><strong>
-		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
+		<a href="https://docs.google.com/spreadsheets/d/1XYK3vx8Adtd1zOXPOoRJgL3lXT3DbAIjRuV4uJ7rjVk/edit?usp=sharing">View</a></strong></td>
 	</tr>
 	<tr>
 		<td width="33" align="center"><b>2</b></td>
@@ -19,7 +19,7 @@
 		<a href="https://forms.gle/cv3X3GgbKPfpfFQ98">
 		<span style="background-color: #FFFFFF">Submit</span></a></strong></td>
 		<td align="center"><strong>
-		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
+		<a href="https://docs.google.com/spreadsheets/d/19PxTQs--FNg80rFrwDbKw4pO_WFQuWR2ffNn9awUTak/edit?usp=sharing">View</a></strong></td>
 	</tr>
 	<tr>
 		<td width="33" align="center"><b>3</b></td>
@@ -29,7 +29,7 @@
 		<a href="https://forms.gle/SDnva8veHayimqQ86">
 		<span style="background-color: #FFFFFF">Submit</span></a></strong></td>
 		<td align="center"><strong>
-		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
+		<a href="https://docs.google.com/spreadsheets/d/1MedIyWKQ4cDMLsBz0Ovy3PTPLkwW-uCrfipPSJQV_LY/edit?usp=sharing">View</a></strong></td>
 	</tr>
 	<tr>
 		<td width="33" align="center"><b>4</b></td>
@@ -39,7 +39,7 @@
 		<a href="https://forms.gle/VpFYGVZWavHpdLgv8">
 		<span style="background-color: #FFFFFF">Submit</span></a></strong></td>
 		<td align="center"><strong>
-		<a href="https://forms.gle/6ceb47KNxm6nXrAC7">View</a></strong></td>
+		<a href="https://docs.google.com/spreadsheets/d/1tqVhCRu9P69OHxDeZcduP-zxomkLng_5ApPQ3rPwRaQ/edit?usp=sharing">View</a></strong></td>
 	</tr>
 </table></center>
 <p>&nbsp;</p>
