--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ var s ="";
 while (s!= "vce026")
 {
 s=prompt("please enter your password");
-if (s=="mypassword")
+if (s=="vce026")
 {
 window.location.href="main.html"; //page to redirect if password entered is correct
 
