--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script type="text/javascript">
 var s ="";
 
-while (s!= "vce026")
+while (s!= "*****")
 {
 s=prompt("please enter your password");
-if (s=="vce026")
+if (s=="*****")
 {
 window.location.href="main.html"; //page to redirect if password entered is correct
 
