--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script type="text/javascript">
 var s ="";
 
-while (s!= "*****")
+while (s!= "*****1")
 {
 s=prompt("please enter your password");
-if (s=="*****")
+if (s=="*****1")
 {
 window.location.href="main.html"; //page to redirect if password entered is correct
 
