--- a/main.html
+++ b/main.html
@@ -41,6 +41,16 @@
 		<td align="center"><strong>
 		<a href="https://docs.google.com/spreadsheets/d/1tqVhCRu9P69OHxDeZcduP-zxomkLng_5ApPQ3rPwRaQ/edit?usp=sharing">View</a></strong></td>
 	</tr>
+	<tr>
+		<td width="33" align="center"><b>4</b></td>
+		<td width="363"><strong>
+		MID Question with Graphs</strong></td>
+		<td width="96" align="center"><strong>
+		<a href="https://forms.gle/GQxtNC6z1sq3tpC99">
+		<span style="background-color: #FFFFFF">Submit</span></a></strong></td>
+		<td align="center"><strong>
+		<a href="https://docs.google.com/spreadsheets/d/1PY20wFs42MW9NNjUmV-p1_XAHssEn74HjIBtKRxHgXM/edit#gid=552186316https://docs.google.com/spreadsheets/d/1tqVhCRu9P69OHxDeZcduP-zxomkLng_5ApPQ3rPwRaQ/edit?usp=sharing">View</a></strong></td>
+	</tr>
 </table></center>
 <p>&nbsp;</p>
 </html>
